--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -399,4 +399,62 @@ Again, a mysterious confidential word appears in register three which must have 
 \subsection{Canaries}
 \label{sec:canaries}
 
+% TODO: Introduce Intel x86 architecture
+In this section, it will be presented how the model of the MINRV8 architecture was altered in order to implement real-world attacks to the Intel x86 architecture.
+By default, the MINRV8 architecture was not vulnerable to these attacks, however, making the architecture vulnerable will put the approach of this thesis to formally verify an instruction set architecture to a test.
+
+\subsubsection{Cache Poisoning Attack on x86}
+
+The - as it will be called here - cache poisoning attack was discovered and presented by Rafal Wojtczuk and Joanna Rutkowska in their publication \textit{Attacking SMM Memory via Intel\textsuperscript{\textregistered} CPU Cache Poisoning} \cite{Wojtczuk09}.
+The term \enquote{SMM memory} refers to a specific region of memory that is designed to be only accessible by the mode of highest privilege in x86 architectures: System Management Mode.
+This mode should be written only on start-up and then locked down for later write-accesses.
+Wojtczuk and Rutkowska, however, managed to find a vulnerability to the x86 architecture which allowed them to effectively write to SMM memeory without SMM privileges by marking respective memory region as write-back-cacheable.
+The attack comprises the following steps and requires administrator privileges on the machine to be attacked:
+\begin{enumerate}
+    \item Mark SMM memory as write-back-cacheable using administrator privileges
+    \item \label{itm:cache-pois-mem}
+    Generate write accesses to the memory.
+    Since the region is marked as write-back-cacheable, the writes will not be propagated to the memory controller which would drop these accesses but will be cached.
+    \item \label{itm:cache-pois-smi}
+    Trigger an System Management Interrupt to transfer control to System Management Mode.
+    Depending on the specific addresses written System Management Mode will now execute code written with administrator privileges.
+\end{enumerate}
+
+Steps \ref{itm:cache-pois-mem} and \ref{itm:cache-pois-smi} can also be swapped.
+If instead of a write access the cache is read in this case, this attack vector can then be utilized to read SMM memory.
+
+This attack does not fully apply to the MINRV8 architecture since it does not support as fine grained privilege modes.
+However, the basic idea can still be implemented if the following changes are made to the model:
+\begin{itemize}
+    \item For all cache transition relations, do not check whether current privilege mode suffices for the memory operation at hand
+    \item For load accesses to memory, do not check whether current privilege mode suffices for the memory read if the address is being cached
+\end{itemize}
+
+These changes manage to introduce a vulnerability to the MINRV8 architecture.
+If assuming all assumptions introduced in section \ref{sec:assumptions}, nuXmv manages to find a counter-example for all three information flow properties.
+
+\begin{table}
+    \begin{subtable}{\textwidth}
+        \centering
+        \input{../results/CACHE-VULN/MEMORY-OP-INTEGRITY.tex}
+        \caption{\smv{MEMORY_OP_INTEGRITY} (\ref{itm:prop-mem-i})}
+        \label{tbl:cex-mem-i-cache-vuln}
+    \end{subtable}
+
+    \begin{subtable}{\textwidth}
+        \centering
+        \input{../results/CACHE-VULN/CSR-INTEGRITY.tex}
+        \caption{\smv{CSR_INTEGRITY} (\ref{itm:prop-csr-i})}
+        \label{tbl:cex-csr-i-cache-vuln}
+    \end{subtable}
+
+    \begin{subtable}{\textwidth}
+        \centering
+        \input{../results/CACHE-VULN/NO-LEAK.tex}
+        \caption{\smv{NO_LEAK} (\ref{itm:prop-no-leak})}
+        \label{tbl:cex-no-leak-cache-vuln}
+    \end{subtable}
+    \caption{Counter-examples for the Cache Vulnerability}
+\end{table}
+
 \subsection{Limitations}
