thesis: Introduce SYSRET vulnerability

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -173,3 +173,58 @@
     howpublished = {Online},
     url = {https://invisiblethingslab.com/resources/misc09/smm_cache_fun.pdf}
 }
+
+@Online{SYSRET-vuln,
+    title = {{CVE}-2012-0217},
+    year = {2012},
+    url={https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2012-0217},
+    urldate={16 September 2019}
+}
+
+@Online{Dunlap19,
+    author = {Dunlap, George},
+    title = {The Intel SYSRET Privilege Escalation},
+    year = {2012},
+    month = {June},
+    url = {https://xenproject.org/2012/06/13/the-intel-sysret-privilege-escalation/},
+    organization = {Xen Project},
+    urldate = {17 September 2019}
+}
+
+@Online{SYSRETFreeBSD,
+    title = {FreeBSD-SA-12:04.sysret Security Advisory},
+    organization = {The FreeBSD Project},
+    year = {2012},
+    month = {July},
+    url={https://www.freebsd.org/security/advisories/FreeBSD-SA-12:04.sysret.asc},
+    urldate={17 September 2019}
+}
+
+@Online{SYSRETDebian,
+    title = {Debian Security Advisory DSA-2508-1 kfreebsd-8 -- privilege escalation},
+    organization = {debian},
+    year = {2012},
+    month = {July},
+    url={https://www.debian.org/security/2012/dsa-2508},
+    urldate={17 September 2019}
+}
+
+@Online{SYSRETCert,
+    title = {SYSRET 64-bit operating system privilege escalation vulnerability on Intel CPU hardware},
+    subtitle = {Vulnerability Note VU\#649219},
+    organization = {CERT Coordination Center},
+    year = {2012},
+    month = {July},
+    url={https://www.kb.cert.org/vuls/id/649219/},
+    urldate={17 September 2019}
+}
+
+@Online{SYSRETMicrosoft,
+    title = {Microsoft Security Bulletin MS12-042 - Important},
+    subtitle = {Vulnerabilities in Windows Kernel Could Allow Elevation of Privilege (2711167)},
+    organization = {Microsoft Corporation},
+    year = {2012},
+    month = {July},
+    url={https://docs.microsoft.com/en-us/security-updates/SecurityBulletins/2012/ms12-042},
+    urldate={17 September 2019}
+}
