thesis: Add results to SYSRET vulnerability section

--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -615,4 +615,45 @@ Here, the vulnerability is triggered by an external interrupt which goes along w
     \label{tbl:cex-sysret}
 \end{table}
 
+\paragraph{Mitigations}
+
+To explore the SYSRET vulnerability in more detail, two approaches to mitigate said vulnerability were tested and added to the model.
+One approach lies upon the burden of ensuring security on the programs running on the architecture and is expressed in form of an assumption, the other modifies the architecture and does not rely on on programs to implement certain guidelines.
+
+Aforementioned assumption is depicted in snippet \ref{snpt:sp-safety}.
+This assumption is twofold.
+The first part does not introduce a new concept and is similar to the assumptions \smv{CLR_ON_DECLASSIFICATION} and \smv{SAN_ON_CLASSFIFICATION} (cf. section \ref{sec:assumptions}, snippets \ref{snpt:clr-on-declassify}, \ref{snpt:san-on-classify}) in that it also deals with memory privilege settings.
+It was already assumed by \smv{INIT} constraints that the stack-pointer for privileged mode initially points into a memory region that is neither read- nor writable to user-mode.
+The first part of the assumption \smv{SP_SAFETY} now assumes that machine-mode keeps this assumption intact throughout all its execution paths, i.e. it does not make the memory region that is used by its stack-pointer accessible to user-mode.
+This part of the new assumption does not add anything new in context of the SYSRET vulnerability but is required to ensure the security of the architecture nonetheless.
+
+The second part of the assumption starts in line \ref{ln:mie-spsel} and targets the SYSRET vulnerability.
+There it is assumed that machine-mode must ensure for interrupts to be disabled whenever it changes the stack-pointer.
+This rules out any attack vector where an external interrupt aborts the execution of the \minrv{Mret} instruction leaving machine-mode with a user-mode-controlled stack pointer.
+Some pending external interrupt can then only be handled after the \minrv{Mret} instruction has been executed.
+This makes the MINRV8 architecture effectively more similar to AMD's version of the x86 architecture which is not vulnerable to the SYSRET vulnerability \cite{Dunlap19}.
+In AMD's x86 architecture, when setting the \lstinline{RIP} with a bad value the general protection fault is thrown after the privilege mode has been lowered rendering the SYSRET attack vector ineffective.
+
+\begin{figure}
+    \begin{lstlisting}[
+        language=smv,
+        caption={Assumption \smv{SP_SAFETY}},
+        label={snpt:sp-safety}
+    ]
+        G (priv -> X (sp[sp_sel] < $REGION0_SIZE
+            ? !pmpcfg0.write & !pmpcfg0.read
+            : !pmpcfg1.write & !pmpcfg1.read)) &
+        G (priv & op = SPSEL -> MIE = 0b_0) & (*\label{ln:mie-spsel}*)
+    \end{lstlisting}
+\end{figure}
+
+The other mitigation modifies the architecture.
+The stack-pointer extension of the MINRV8 architecture was altered such that the two stack-pointers are assigned to privilege-modes and switched by hardware.
+Whenever the architecture changes into machine-mode, \smv{sp_sel} is set to \smv{1} and whenever it changes into user-mode \smv{sp_sel} is set to \smv{0}.
+Furthermore, the \minrv{Spsel} instruction is disabled.
+Therefore, with this modification to the architecture all \minrv{Spsel} related parts of the \smv{SP_BANK} and \smv{SP_SAFETY} assumptions can be dropped.
+
+With both stack-pointer related assumptions, \smv{SP_BANK} and \smv{SP_SAFETY}, nuXmv manages to verify that the architecture does not violate any information flow property.
+The same is true for the modification of the architecture where the stack-pointer is selected automatically by the architecture and \minrv{Spsel} related parts of aforementioned assumptions are dropped.
+
 \subsection{Limitations}
